# lab6

./: .gitmodules  CMakeLists.txt  reflection.txt
DoublyLinkedList/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  task1.cpp
game/: CMakeCache.txt  CMakeLists.txt  Circle.cpp  Circle.h  Instuctions.txt  Point2D.h  Rectangle.cpp  Rectangle.h  Shape.h  Technical document.txt.txt  Triangle.cpp  Triangle.h  gen_model.py  main.cpp
game/src/: Asteroid.cpp  Asteroid.h  Circle.cpp  Circle.h  Color.h  FilledRectangle.cpp  FilledRectangle.h  Game.cpp  Game.h  GameConstants.h  GameObject.cpp  GameObject.h  HealthAsteroid.cpp  HealthAsteroid.h  InputActions.h  LazerShot.cpp  LazerShot.h  Model.h  ModelShape.cpp  ModelShape.h  NumberShape.cpp  NumberShape.h  ParticleShape.cpp  ParticleShape.h  ParticleSystem.cpp  ParticleSystem.h  Point2D.cpp  Point2D.h  Rectangle.cpp  Rectangle.h  SevenSegShape.cpp  SevenSegShape.h  Shape.cpp  Shape.h  Shape3D.cpp  Shape3D.h  SpaceShip.cpp  SpaceShip.h  main.cpp
game/src/autogen/: asteroid_1_model.h  generated_models.cpp  generated_models.h  ico_particle_field_model.h  space_ship_model.cpp  space_ship_model.h
